front-fix: post overflow

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -49,6 +49,9 @@
         text-align: center;
         width: 30%;
         transition: 0.5s;
+        font-size: 13px;
+        font-weight: 200
+
       }
 
       .input[type='text']:hover {
