--- a/src/components/posts/post-modal/post-add/AddPost.scss
+++ b/src/components/posts/post-modal/post-add/AddPost.scss
@@ -120,6 +120,7 @@
       padding: 0 20px;
       overflow-x: hidden;
       word-break: break-all;
+      max-width: 500px;
 
       &:empty::before {
         content: attr(data-placeholder);
