--- a/src/components/posts/post-modal/post-edit/EditPost.scss
+++ b/src/components/posts/post-modal/post-edit/EditPost.scss
@@ -123,6 +123,7 @@
       padding: 0 20px;
       overflow-x: hidden;
       word-break: break-all;
+      max-width: 500px;
 
       &:empty::before {
         content: attr(data-placeholder);
